--- a/css/style.css
+++ b/css/style.css
@@ -357,11 +357,11 @@
 		}
 
 		ul.special-icons .fa {
-			float: left;
-			display: inline-block;
-			padding-right: 1em;
-			font-size: 1.4em;
-			color: #82b440;
+	float: left;
+	display: inline-block;
+	padding-right: 1em;
+	font-size: 1.4em;
+	color: #555555;
 		}
 
 		ul.special-icons p {
@@ -369,9 +369,10 @@
 		}
 		
 		.u3 {
-			position:relative;
-			width: 960px;
-			margin: 0 auto;
+	position: relative;
+	width: 960px;
+	margin: auto;
+	font-size: 12pt;
 		}
 
 /* Tables */
@@ -417,8 +418,8 @@
 		background: none;
 		border-radius: none;
 		border: 2px solid;
-		border-color: #82b440;
-		color: #82b440;
+		border-color: #555555;
+		color: #555555;
 		cursor: pointer;
 		display: inline-block;
 		padding: 0.90em 1.2em;
@@ -438,8 +439,8 @@
 		input[type="reset"]:hover,
 		input[type="button"]:hover,
 		.button:hover {
-			background: #82b440;
-			color: white;
+	background-color: #555555;
+	color: #555555;
 		}
 
 		input[type="submit"].alt,
@@ -455,7 +456,7 @@
 			input[type="button"].alt:hover,
 			.button.alt:hover {
 				background: white;
-				color: #82b440;
+				color: #555555;
 			}
 
 		input[type="submit"].fit,
@@ -520,10 +521,10 @@
 			}
 
 		.wrapper.style3 {
-			padding-bottom: 6em;
-			background: #82b440;
-			text-align: center;
-			color: white;
+	padding-bottom: 6em;
+	background-color: #555555;
+	text-align: center;
+	color: white;
 		}
 
 			.wrapper.style3 .container {
@@ -540,9 +541,9 @@
 		}
 
 		.wrapper.style5 {
-			background: #82b440;
-			text-align: center;
-			color: white;
+	background-color: #555555;
+	text-align: center;
+	color: white;
 		}
 
 			.wrapper.style5 .image {
@@ -684,11 +685,11 @@
 		}
 
 		#banner h2 {
-			display: inline-block;
-			padding: 0.50em 0.30em;
-			background: #82b440;
-			font-size: 3em;
-			font-weight: 400;
+	display: inline-block;
+	padding: 0.50em 0.30em;
+	background-color: #555555;
+	font-size: 3em;
+	font-weight: 400;
 		}
 
 		#banner span, #banner p {
@@ -798,9 +799,10 @@
 /* Team */
 
 	#team h3 {
-		margin-bottom: 0.50em;
-		letter-spacing: 2px;
-		text-transform: uppercase;
-		font-weight: 700;
+	letter-spacing: 2px;
+	text-transform: uppercase;
+	font-weight: 700;
+	margin: auto;
+	width: 960px;
 	}.3u {
 }
