--- a/css/style.css
+++ b/css/style.css
@@ -35,8 +35,8 @@
 	}
 
 	a {
-		color: #82b440;
-		text-decoration: underline;
+	color: #BD1312;
+	text-decoration: underline;
 	}
 
 	strong, b {
@@ -581,11 +581,12 @@
 	}
 
 	#logo {
-		line-height: 2em;
-		letter-spacing: 2px;
-		text-transform: uppercase;
-		font-size: 2em;
-		font-weight: 400;
+	line-height: 2em;
+	letter-spacing: 2px;
+	text-transform: uppercase;
+	font-size: 2em;
+	font-weight: 400;
+	color: whie;
 	}
 
 		#logo h1 {
