--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -23,7 +23,9 @@
 		}
 
 		.wrapper.style4 p {
-			margin-bottom: 1em;
+	margin-bottom: 1em;
+	margin-left: 35px;
+	margin-top: 4px;
 		}
 
 		.wrapper.style5 img {
