--- a/css/style.css
+++ b/css/style.css
@@ -690,7 +690,7 @@
 	padding: 0.50em 0.30em;
 	background-color: #555555;
 	font-size: 3em;
-	font-weight: 600;
+	font-weight: normal;
 		}
 
 		#banner span, #banner p {
@@ -698,7 +698,7 @@
 	letter-spacing: 1px;
 	text-transform: uppercase;
 	font-size: 2em;
-	font-weight: bolder;
+	font-weight: normal;
 	color: #FFFFFF;
 		}
 
